[tool.poetry]
name = "research-utils"
version = "2021.09.22.2"
description = "some utils for my research"
authors = ["Rainforest Cheng <r08521610@ntu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlite-utils = "^3.6"
pytorch-lightning = "^1.2.2"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
