[tool.poetry]
name = "research-utils"
version = "0.0.6"
description = "some utils for my research"
authors = ["Rainforest Cheng <r08521610@ntu.edu.tw>"]
readme = "README.md"
homepage = "https://r08521610.github.io/research-utils/"
repository = "https://github.com/r08521610/research-utils"

[tool.poetry.dependencies]
python = ">=3.8, <4"
numpy = "^1.21.5"
sqlite-utils = "^3.6"
PyYAML = "^6.0"
torch = {version = "^1.10.1", optional = true}
mlflow = {version = "^1.22.0", optional = true}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pytest = "^6.2.5"
mkdocs = "^1.2.3"
mkdocs-include-markdown-plugin = "^3.2.3"
yapf = "^0.31.0"

[tool.poetry.extras]
torch = ["torch"]
mlflow = ["mlflow"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.6"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "research_utils/__version__.py",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
